--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -13,15 +13,15 @@
 					<legend>Login details</legend>
 					<div class="row">
 						<div class="columns large-3">
-							<label for="userName">E-mail *</label>
+							<label for="userName">E-mail</label>
 							<input type="email" name="userName" id="userName" th:field="*{userName}" maxlength="128" required/>
 						</div>
 						<div class="columns large-3">
-							<label for="password">Password *</label>
+							<label for="password">Password</label>
 							<input type="password" name="password" id="password" th:field="*{password}" autocomplete="off" maxlength="255" required/>
 						</div>
 						<div class="columns large-3">
-							<label for="cpassword">Confirm Password *</label>
+							<label for="cpassword">Confirm Password</label>
 							<input type="password" name="cpassword" id="cpassword" autocomplete="off" value="" maxlength="255" required/>
 						</div>
 					</div>
@@ -31,11 +31,11 @@
 					<legend>Profile information</legend>
 					<div class="row">
 						<div class="columns large-2">
-							<label for="firstName">First name *</label>
+							<label for="firstName">First name</label>
 							<input type="text" name="firstName" id="firstName" th:field="*{firstName}" maxlength="255" required/>
 						</div>
 						<div class="columns large-2">
-							<label for="lastName">Last name *</label>
+							<label for="lastName">Last name</label>
 							<input type="text" name="lastName" id="lastName" th:field="*{lastName}" maxlength="255" required/>
 						</div>
 					</div>
@@ -44,10 +44,10 @@
 							<fieldset class="fieldset--inner">
 								<legend>Picture</legend>
 								<div class="columns">
+									<!--/* inspired on https://phppot.com/jquery/jquery-ajax-image-upload/ */-->
 									<div id="profilePictureOuter">
 										<div id="profilePictureLayer"></div>
 										<div class="icon--choose-image">
-											<!--/* css for this inspired on https://phppot.com/jquery/jquery-ajax-image-upload/ */-->
 											<input type="file" class="input--choose-image" name="profilePictureFile" id="profilePictureFile" accept="image/jpeg,image/png" onchange="updateProfilePicture(this);">
 										</div>
 									</div>
@@ -72,7 +72,7 @@
 						<div class="columns large-1">
 							<input type="checkbox" th:field="*{acceptedPP}" required/>
 							<label class="label--checkbox" th:for="${#ids.prev('acceptedPP')}">I accept</label>
-							<label class="label--checkbox"><a target="_blank" th:href="${privacyUrl}" class="normal">the TCBL privacy policy</a>. *</label>
+							<label class="label--checkbox"><a target="_blank" th:href="${privacyUrl}" class="normal">the TCBL privacy policy</a>.</label>
 						</div>
 					</div>
 				</fieldset>
