--- a/src/main/resources/templates/user/info.html
+++ b/src/main/resources/templates/user/info.html
@@ -65,6 +65,8 @@
 				<!--/* post all other tcblUser's properties in the returned TCBLUser object as well! */-->
 				<input type="hidden" th:field="*{userName}"/>
 				<input type="hidden" th:field="*{active}"/>
+				<!--/* this one is special (modified by Javascript!) */-->
+				<input name="pictureURL" type="hidden" th:field="*{pictureURL}"/>
 			</form>
 		</th:block>
 	</main>
