Added user profile field to allow TCBL activity logging.

--- a/src/main/resources/templates/user/info.html
+++ b/src/main/resources/templates/user/info.html
@@ -46,13 +46,19 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="columns large-2">
+						<div class="columns large-1">
 							<input type="checkbox" th:field="*{subscribedNL}"/>
 							<label class="label--checkbox" th:for="${#ids.prev('subscribedNL')}">I want to receive the TCBL newsletter.</label>
 						</div>
 					</div>
 					<div class="row">
-						<div class="columns large-2">
+						<div class="columns large-1">
+							<input type="checkbox" th:field="*{allowedMon}"/>
+							<label class="label--checkbox" th:for="${#ids.prev('allowedMon')}">I allow my activities on TCBL sites to be monitored.</label>
+						</div>
+					</div>
+					<div class="row">
+						<div class="columns large-1">
 							<input type="checkbox" th:field="*{acceptedPP}" required/>
 							<label class="label--checkbox" th:for="${#ids.prev('acceptedPP')}">I accept</label>
 							<label class="label--checkbox"><a target="_blank" th:href="${privacyUrl}" class="normal">the TCBL privacy policy</a>.</label>
