--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -70,6 +70,12 @@
 					</div>
 					<div class="row">
 						<div class="columns large-1">
+							<input type="checkbox" th:field="*{allowedMon}"/>
+							<label class="label--checkbox" th:for="${#ids.prev('allowedMon')}">I allow my activities on TCBL sites to be monitored.</label>
+						</div>
+					</div>
+					<div class="row">
+						<div class="columns large-1">
 							<input type="checkbox" th:field="*{acceptedPP}" required/>
 							<label class="label--checkbox" th:for="${#ids.prev('acceptedPP')}">I accept</label>
 							<label class="label--checkbox"><a target="_blank" th:href="${privacyUrl}" class="normal">the TCBL privacy policy</a>.</label>
