--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -71,7 +71,7 @@
 					<div class="row">
 						<div class="columns large-1">
 							<input type="checkbox" th:field="*{allowedMon}"/>
-							<label class="label--checkbox" th:for="${#ids.prev('allowedMon')}">I allow my activities on TCBL sites to be monitored.</label>
+							<label class="label--checkbox" th:for="${#ids.prev('allowedMon')}">I agree to let TCBL to track my activities through the platform for the purposes of improving my status, winning awards, and providing useful feedback to TCBL services. The TCBL Open Platform ensures that this information remains strictly within the TCBL Community and is not shared with any third party.</label>
 						</div>
 					</div>
 					<div class="row">
