--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,12 +11,7 @@ the other templates.
 	<title>TCBL User Manager</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" th:href="@{/css/tcbl.css}" />
-	<!--/* not needed: -->
-	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-	<!--*/-->
-	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<!--/* not needed: -->
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script th:src="@{/webjars/jquery/1.12.4/jquery.min.js}"></script>
 	<script>
 		$( function() {
 			$( "#dialog" ).dialog();
