--- a/src/main/resources/templates/stats/users.html
+++ b/src/main/resources/templates/stats/users.html
@@ -20,7 +20,7 @@
             <p>No stats found!</p>
         </div>
         <canvas id="myChart" width="600" height="400"></canvas>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
+        <script th:src="@{/webjars/chartjs/2.7.0/Chart.min.js}"></script>
         <script th:inline="javascript">
             var ctx = document.getElementById("myChart").getContext('2d');
             var dates = [[${dates}]];
